fix(QTDI-3124): [Refactoring] Merge sonar fixes (#1248)