@@ -16,7 +16,6 @@
 package org.talend.sdk.component.form.internal.validation.spi.ext;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Collection;
 import java.util.Optional;
@@ -38,10 +37,10 @@ public class TypeValidation implements ValidationExtension {
     @Override
     public Optional<Function<JsonValue, Stream<ValidationError>>> create(final ValidationContext model) {
         final JsonValue value = model.getSchema().get("type");
-        if (value instanceof JsonString) {
+        if (value instanceof JsonString jsonString) {
             return Optional
                     .of(new Impl(model.toPointer(), model.getValueProvider(),
-                            mapType((JsonString) value).toArray(JsonValue.ValueType[]::new)));
+                            mapType(jsonString).toArray(JsonValue.ValueType[]::new)));
         }
         if (value instanceof JsonArray) {
             return Optional
@@ -83,7 +82,7 @@ public class TypeValidation implements ValidationExtension {
                     .concat(Stream.of(types), Stream.of(JsonValue.ValueType.NULL))
                     .distinct()
                     .sorted(comparing(JsonValue.ValueType::name))
-                    .collect(toList());
+                    .toList();
         }
 
         @Override
