@@ -21,7 +21,6 @@ import static java.util.Collections.singletonMap;
 import static java.util.Locale.ENGLISH;
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.lang.annotation.Annotation;
@@ -130,7 +129,7 @@ public class UiParameterEnricher extends BaseParameterEnricher {
                                                     .of(component.getMethods())
                                                     .filter(mtd -> mtd.getDeclaringClass() == component
                                                             && "value".equals(mtd.getName()))
-                                                    .collect(toList());
+                                                    .toList();
                                             final StringBuilder builder = new StringBuilder("");
                                             for (int i = 0; i < length; i++) {
                                                 final Object annot = Array.get(invoke, i);
@@ -177,11 +176,11 @@ public class UiParameterEnricher extends BaseParameterEnricher {
                 }
                 return string;
             }
-            if (invoke instanceof Class) {
-                return ((Class) invoke).getSimpleName().toLowerCase(ENGLISH);
+            if (invoke instanceof Class aClass) {
+                return aClass.getSimpleName().toLowerCase(ENGLISH);
             }
-            if (invoke instanceof String[]) {
-                return Stream.of((String[]) invoke).collect(joining(","));
+            if (invoke instanceof String[] strings) {
+                return Stream.of(strings).collect(joining(","));
             }
             return String.valueOf(invoke);
         } catch (final InvocationTargetException | IllegalAccessException e) {
