@@ -20,7 +20,6 @@ import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
 import static java.util.Optional.ofNullable;
 import static java.util.function.UnaryOperator.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON_TYPE;
 import static javax.xml.transform.OutputKeys.OMIT_XML_DECLARATION;
@@ -359,7 +358,7 @@ public class ComponentResourceImpl implements ComponentResource {
                                     detail.getLinks(),
                                     detail.getMetadata())))
                     .filter(filter)
-                    .collect(toList()));
+                    .toList());
         });
     }
 
@@ -549,15 +548,14 @@ public class ComponentResourceImpl implements ComponentResource {
 
     @Override
     public Map<String, String> migrate(final String id, final int version, final Map<String, String> config) {
-        final Map<String, String> configuration = config.entrySet().stream().map(e -> {
+        config.entrySet().forEach(e -> {
             if (e.getValue().startsWith(BASE64_PREFIX)) {
                 final String value = new String(Base64
                         .getUrlDecoder()
                         .decode(e.getValue().substring(BASE64_PREFIX.length()).getBytes(StandardCharsets.UTF_8)));
                 e.setValue(value);
             }
-            return e;
-        }).collect(toMap(Entry::getKey, Entry::getValue));
+        });
         if (virtualComponents.isExtensionEntity(id)) {
             return config;
         }
@@ -640,7 +638,7 @@ public class ComponentResourceImpl implements ComponentResource {
                 componentDetail.setDisplayName(bundle.displayName().orElse(meta.getName()));
                 componentDetail.setProperties(propertiesService
                         .buildProperties(meta.getParameterMetas().get(), container.getLoader(), locale, null)
-                        .collect(toList()));
+                        .toList());
                 componentDetail.setActions(actionsService
                         .findActions(meta.getParent().getName(), container, locale, meta,
                                 meta.getParent().findBundle(container.getLoader(), locale)));
@@ -651,7 +649,7 @@ public class ComponentResourceImpl implements ComponentResource {
                 errors.put(id, new ErrorPayload(COMPONENT_MISSING, "No component '" + id + "'"));
                 return null;
             });
-        }).filter(Objects::nonNull).collect(toList());
+        }).filter(Objects::nonNull).toList();
 
         if (!errors.isEmpty()) {
             throw new WebApplicationException(Response.status(Response.Status.BAD_REQUEST).entity(errors).build());
@@ -743,13 +741,13 @@ public class ComponentResourceImpl implements ComponentResource {
             final Stream<Artifact> deps = c.findDependencies();
             final Stream<Artifact> artifacts;
             if (configuration.getAddExtensionDependencies() && extension != null) {
-                final List<Artifact> dependencies = deps.collect(toList());
+                final List<Artifact> dependencies = deps.toList();
                 final Stream<Artifact> addDeps = getExtensionDependencies(extension, dependencies);
                 artifacts = Stream.concat(dependencies.stream(), addDeps);
             } else {
                 artifacts = deps;
             }
-            return artifacts.map(Artifact::toCoordinate).collect(toList());
+            return artifacts.map(Artifact::toCoordinate).toList();
         }).orElseThrow(() -> new IllegalArgumentException("Can't find container '" + meta.getId() + "'")));
     }
 
@@ -794,7 +792,7 @@ public class ComponentResourceImpl implements ComponentResource {
                         .map(category -> parentBundle.category(category)
                                 .orElseGet(() -> category.replace("/" + meta.getParent().getName() + "/",
                                         "/" + familyDisplayName + "/")))
-                        .collect(toList()))
+                        .toList())
                 .orElseGet(Collections::emptyList);
         return new ComponentIndex(
                 new ComponentId(meta.getId(), meta.getParent().getId(), plugin,
