@@ -17,7 +17,6 @@ package org.talend.sdk.component.test.connectors.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.talend.sdk.component.api.configuration.Option;
 import org.talend.sdk.component.api.service.Service;
@@ -43,11 +42,11 @@ public class ActionsServices {
      *
      */
 
-    public final static String LIST_ENTITIES = "action_LIST_ENTITIES";
+    public static final String LIST_ENTITIES = "action_LIST_ENTITIES";
 
-    public final static String UPDATE_CONFIG = "action_UPDATE";
+    public static final String UPDATE_CONFIG = "action_UPDATE";
 
-    public final static String VALIDATION = "action_VALIDATION";
+    public static final String VALIDATION = "action_VALIDATION";
 
     @Service
     private I18n i18n;
@@ -66,7 +65,7 @@ public class ActionsServices {
                 .stream()
                 .map(i -> String.valueOf(i))
                 .map(i -> new Item(i, i18n.entityName(i)))
-                .collect(Collectors.toList());
+                .toList();
 
         return new SuggestionValues(true, entities);
     }
@@ -77,7 +76,7 @@ public class ActionsServices {
      * https://talend.github.io/component-runtime/main/latest/services-actions.html#_update
      */
     @Update(UPDATE_CONFIG)
-    public NestedConfig retrieveFeedback(final @Option("configuration") NestedConfig source) throws Exception {
+    public NestedConfig retrieveFeedback(@Option("configuration") final NestedConfig source) throws Exception {
         NestedConfig dest = new NestedConfig();
         dest.setStringOption1(i18n.setByService(source.getStringOption1()));
         dest.setStringOption2(i18n.setByService(source.getStringOption2()));
